# hydra_cluster_example

./: README.md  main.py  setup.cfg
configs/: exp_1.yaml  exp_1_local_sine.yaml  exp_2_local_relu.yaml  exp_3_local_multirun.yaml  exp_4_bwuni_dev.yaml  exp_5_bwuni.yaml  exp_6_local_on_disk.yaml  exp_7_bwuni_on_disk.yaml  exp_bwuni_dev.yaml  exp_local.yaml  exp_local_multirun.yaml  exp_local_relu.yaml
configs/algorithm/: mlp.yaml
configs/dataset/: line.yaml  on_disk.yaml  sine.yaml
configs/platform/: bwuni.yaml  bwuni_all_gpus.yaml  bwuni_all_gpus_copy_dataset.yaml  bwuni_copy_dataset.yaml  bwuni_dev.yaml  bwuni_dev_copy_dataset.yaml  bwuni_dev_gpu_4.yaml  bwuni_dev_gpu_4_copy_dataset.yaml  bwuni_gpu_4.yaml  local.yaml
outputs/2024-12-18/11-04-20/.hydra/: hydra.yaml
outputs/2024-12-18/11-04-28/.hydra/: config.yaml  hydra.yaml
outputs/2024-12-18/11-06-25/.hydra/: hydra.yaml
outputs/2024-12-18/11-07-07/.hydra/: hydra.yaml
outputs/2024-12-18/12-54-31/.hydra/: hydra.yaml
outputs/2024-12-18/12-55-19/.hydra/: config.yaml  hydra.yaml
outputs/2024-12-18/12-59-56/.hydra/: config.yaml  hydra.yaml
outputs/2024-12-18/13-00-21/.hydra/: config.yaml  hydra.yaml
outputs/2024-12-18/13-00-47/.hydra/: hydra.yaml
scripts/: generate_on_disk_dataset.py  test_torch.py
src/hydra_cluster_example.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/hydra_cluster_example/algorithm/: __init__.py  mlp.py
src/hydra_cluster_example/dataset/: __init__.py  abstract_dataset.py  abstract_in_memory_dataset.py  line.py  on_disk.py  sine.py
(+30 files in other folders)
