[metadata]
name = hydra_cluster_example
description = Example Research project to setup your hydra and slurm configuration
author = Philipp Dahlinger
license = tbd
license_file = LICENSE
platforms = linux, osx
version = 0.0.1
classifiers = 
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only

[options]
install_requires =
    numpy
    tqdm
    wandb
    omegaconf
    torch
    hydra-submitit-launcher
    matplotlib

python_requires = >=3.8
package_dir =
    =src
packages =
    hydra_cluster_example